--- a/modules/Makefile
+++ b/modules/Makefile
@@ -12,6 +12,10 @@ apply:
 	@echo "==> Applying changes in $(RESOURCE)..."
 	cd $(RESOURCE) && terraform apply --auto-approve
 
+destroy:
+	@echo "==> Destroying infrastructure in $(RESOURCE)..."
+	cd $(RESOURCE) && terraform destroy --auto-approve
+
 all: init plan apply
 
-.PHONY: init plan apply all
+.PHONY: init plan apply destroy all
